ci/cd: fix isort args

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,4 +6,4 @@ steps:
   image: python:alpine
   commands:
   - pip install isort
-  - isort --check-only --diff --recursive .
+  - isort --check-only --diff .
